<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuizIt</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_add">Add question</string>
    <string name="title_activity_show_question">ShowQuestion</string>
    <string name="title_activity_questions_activity">Questions</string>
    <string name="join_group">Join group</string>
    <string name="find_group">Find group</string>
    <string name="most_recent_groups">Most recent groups</string>
    <string name="title_activity_join_group">JoinGroupActivity</string>
    <string name="title_activity_create_group">CreateGroupActivity</string>
    <string name="remove_group">\u2718</string>
    <string name="joined_groups">Joined groups</string>
    <string name="create_group_text">Create new group</string>
    <string name="create_group_hint">Enter new group name</string>
    <string name="group_already_exists">This group already exists. Click Join to join the group.</string>
    <string name="join">Join</string>
    <string name="cancel">Cancel</string>
    <string name="create_group_button_text">Create group</string>
    <string name="leave_group_dialog">Do you really want to leave group %1$s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create_new_group">Create a new group</string>
    <string name="title_activity_add_question">AddQuestionActivity</string>
    <string name="enter_question_text">Enter question\'s text</string>
    <string name="enter_question_tag">Enter question\'s tags</string>
    <string name="submit_question">Submit question</string>

</resources>
