<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.hackathon.quizit.app.question.AddQuestionActivity">

    <EditText
        android:id = "@+id/edit_text_question"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:maxLines="5"
        android:layout_marginBottom="@dimen/group_activity_margin"
        android:hint="@string/enter_question_text"
        android:textColorHint="@color/silver"
        android:background="@drawable/group__list_element"/>

    <EditText
        android:id = "@+id/edit_text_tags"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:maxLines="2"
        android:layout_marginBottom="@dimen/group_activity_margin"
        android:layout_marginLeft="@dimen/group_activity_margin"
        android:hint="@string/enter_question_tag"
        android:textColorHint="@color/silver"
        android:background="@drawable/group__list_element"
        android:layout_below="@+id/edit_text_question"/>

    <Button
        android:id = "@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/submit_question"
        android:layout_marginBottom="@dimen/group_activity_margin"
        android:layout_marginLeft="@dimen/group_activity_margin"
        android:background="@drawable/group__list_element"
        android:onClick="submitButtonClicked"
        android:layout_below="@+id/edit_text_tags"/>

</RelativeLayout>
