<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.hackathon.quizit.app.MainActivity">

    <Button
        android:id="@+id/join_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/group_activity_margin"
        android:textSize="@dimen/group_button_text_size"
        android:onClick="joinGroup"
        android:text="@string/join_group"/>

    <Button
        android:id="@+id/find_groups_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/group_activity_margin"
        android:textSize="@dimen/group_button_text_size"
        android:onClick="searchGroup"
        android:text="@string/find_group"
        android:layout_below="@+id/join_group_button"/>

    <TextView
        android:id="@+id/most_recent_group_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/group_activity_margin"
        android:text="@string/most_recent_groups"
        android:textSize="@dimen/most_recent_groups_text_size"
        android:layout_below="@+id/find_groups_button"/>

    <Button
        android:id="@+id/most_recent_group_button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/group_activity_margin"
        android:textSize="@dimen/group_button_text_size"
        android:layout_centerHorizontal="true"
        android:onClick="mostRecentGroup1"
        android:layout_below="@+id/most_recent_group_text_view"/>

    <Button
        android:id="@+id/most_recent_group_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/group_activity_margin"
        android:textSize="@dimen/group_button_text_size"
        android:layout_centerHorizontal="true"
        android:onClick="mostRecentGroup2"
        android:layout_below="@+id/most_recent_group_button_1"/>

    <Button
        android:id="@+id/most_recent_group_button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/group_activity_margin"
        android:textSize="@dimen/group_button_text_size"
        android:layout_centerHorizontal="true"
        android:onClick="mostRecentGroup3"
        android:layout_below="@+id/most_recent_group_button_2"/>


</RelativeLayout>
